# wsl-plugin-sample-rust

./: .gitignore  Cargo.toml  LICENSE  README.md
scripts/: register.cmd  sign-plugin.ps1  stop-wsl.cmd
wsl-plugin-api-sys/: Cargo.toml  build.rs
wsl-plugin-api-sys/include/: .gitignore
wsl-plugin-sample/: Cargo.toml
wsl-plugin-sample/src/: lib.rs
