[package]
name = "wsl-plugin-sample"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wsl-plugin-api-sys = { path = "../wsl-plugin-api-sys" }
[dependencies.windows]
version = "0.56.0"
features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_Networking_WinSock",
]
